--- a/docs/source/examples/online_retail_analysis.ipynb
+++ b/docs/source/examples/online_retail_analysis.ipynb
@@ -176,7 +176,7 @@
       " size: None\n",
       " sort_params: None\n",
       " _source: None\n",
-      " body: {'aggs': {}}\n",
+      " body: {}\n",
       " post_processing: []\n",
       "'field_to_display_names': {}\n",
       "'display_to_field_names': {}\n",
@@ -308,7 +308,7 @@
       " size: 2\n",
       " sort_params: _doc:desc\n",
       " _source: None\n",
-      " body: {'aggs': {}}\n",
+      " body: {}\n",
       " post_processing: [('sort_index'), ('head': ('count': 2)), ('tail': ('count': 2))]\n",
       "'field_to_display_names': {}\n",
       "'display_to_field_names': {}\n",
@@ -813,7 +813,7 @@
       " size: None\n",
       " sort_params: None\n",
       " _source: None\n",
-      " body: {'query': {'bool': {'must': [{'term': {'Country': 'Germany'}}, {'range': {'Quantity': {'gt': 90}}}]}}, 'aggs': {}}\n",
+      " body: {'query': {'bool': {'must': [{'term': {'Country': 'Germany'}}, {'range': {'Quantity': {'gt': 90}}}]}}}\n",
       " post_processing: []\n",
       "'field_to_display_names': {}\n",
       "'display_to_field_names': {}\n",
@@ -1037,24 +1037,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>14220.581670</td>\n",
+       "      <td>14222.723191</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.250000</td>\n",
        "      <td>3756.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>15666.545935</td>\n",
+       "      <td>15662.447503</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.510000</td>\n",
-       "      <td>7498.861278</td>\n",
+       "      <td>7499.474751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>17213.978376</td>\n",
-       "      <td>6.614054</td>\n",
-       "      <td>4.215516</td>\n",
-       "      <td>11249.500000</td>\n",
+       "      <td>17215.439595</td>\n",
+       "      <td>6.688372</td>\n",
+       "      <td>4.214198</td>\n",
+       "      <td>11249.431249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1073,9 +1073,9 @@
        "mean   15590.776680      7.464000      4.103233   7499.500000\n",
        "std     1764.025160     85.924387     20.104873   4330.127009\n",
        "min    12347.000000  -9360.000000      0.000000      0.000000\n",
-       "25%    14220.581670      1.000000      1.250000   3756.500000\n",
-       "50%    15666.545935      2.000000      2.510000   7498.861278\n",
-       "75%    17213.978376      6.614054      4.215516  11249.500000\n",
+       "25%    14222.723191      1.000000      1.250000   3756.500000\n",
+       "50%    15662.447503      2.000000      2.510000   7499.474751\n",
+       "75%    17215.439595      6.688372      4.214198  11249.431249\n",
        "max    18239.000000   2880.000000    950.990000  14999.000000"
       ]
      },
