--- a/docs/source/examples/demo_notebook.ipynb
+++ b/docs/source/examples/demo_notebook.ipynb
@@ -753,7 +753,7 @@
     {
      "data": {
       "text/plain": [
-       "<eland.index.Index at 0x117f18210>"
+       "<eland.index.Index at 0x116296ed0>"
       ]
      },
      "execution_count": 17,
@@ -1083,7 +1083,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DataFrame.tail"
+    "### DataFrame.tail"
    ]
   },
   {
@@ -2704,10 +2704,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>410.011039</td>\n",
-       "      <td>2470.545974</td>\n",
+       "      <td>410.008918</td>\n",
+       "      <td>2470.815717</td>\n",
        "      <td>...</td>\n",
-       "      <td>251.944994</td>\n",
+       "      <td>252.064162</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2720,11 +2720,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>842.259390</td>\n",
-       "      <td>9735.660463</td>\n",
+       "      <td>842.233478</td>\n",
+       "      <td>9761.507504</td>\n",
        "      <td>...</td>\n",
-       "      <td>720.534532</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>720.589440</td>\n",
+       "      <td>4.241497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -2745,9 +2745,9 @@
        "mean       628.253689         7092.142457  ...     511.127842      2.835975\n",
        "std        266.386661         4578.263193  ...     334.741135      1.939365\n",
        "min        100.020531            0.000000  ...       0.000000      0.000000\n",
-       "25%        410.011039         2470.545974  ...     251.944994      1.000000\n",
+       "25%        410.008918         2470.815717  ...     252.064162      1.000000\n",
        "50%        640.387285         7612.072403  ...     503.148975      3.000000\n",
-       "75%        842.259390         9735.660463  ...     720.534532      4.000000\n",
+       "75%        842.233478         9761.507504  ...     720.589440      4.241497\n",
        "max       1199.729004        19881.482422  ...    1902.901978      6.000000\n",
        "\n",
        "[8 rows x 7 columns]"
