Adding support for multiple arithmetic operations.
Added new 'arithmetics' file to manage this process.
More tests to be added + cleanup.

--- a/docs/source/examples/online_retail_analysis.ipynb
+++ b/docs/source/examples/online_retail_analysis.ipynb
@@ -1037,22 +1037,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>14220.529879</td>\n",
+       "      <td>14220.693242</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.250000</td>\n",
        "      <td>3756.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>15661.227460</td>\n",
+       "      <td>15662.447503</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.510000</td>\n",
-       "      <td>7499.363732</td>\n",
+       "      <td>7499.283452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>17214.478439</td>\n",
-       "      <td>6.613198</td>\n",
+       "      <td>17215.416667</td>\n",
+       "      <td>6.678927</td>\n",
        "      <td>4.210000</td>\n",
        "      <td>11249.500000</td>\n",
        "    </tr>\n",
@@ -1073,9 +1073,9 @@
        "mean   15590.776680      7.464000      4.103233   7499.500000\n",
        "std     1764.025160     85.924387     20.104873   4330.127009\n",
        "min    12347.000000  -9360.000000      0.000000      0.000000\n",
-       "25%    14220.529879      1.000000      1.250000   3756.500000\n",
-       "50%    15661.227460      2.000000      2.510000   7499.363732\n",
-       "75%    17214.478439      6.613198      4.210000  11249.500000\n",
+       "25%    14220.693242      1.000000      1.250000   3756.500000\n",
+       "50%    15662.447503      2.000000      2.510000   7499.283452\n",
+       "75%    17215.416667      6.678927      4.210000  11249.500000\n",
        "max    18239.000000   2880.000000    950.990000  14999.000000"
       ]
      },
@@ -1382,12 +1382,12 @@
     {
      "data": {
       "text/plain": [
-       "1000    1.25\n",
-       "1001    1.25\n",
-       "1002    1.25\n",
-       "1003    1.25\n",
-       "1004    3.48\n",
-       "dtype: float64"
+       "1000     1\n",
+       "1001     1\n",
+       "1002     1\n",
+       "1003     1\n",
+       "1004    12\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 25,
@@ -1414,17 +1414,17 @@
     {
      "data": {
       "text/plain": [
-       "1000      United Kingdom21123\n",
-       "1001      United Kingdom21124\n",
-       "1002      United Kingdom21122\n",
-       "1003      United Kingdom84378\n",
-       "1004      United Kingdom21985\n",
-       "                 ...         \n",
-       "14995    United Kingdom72349B\n",
-       "14996     United Kingdom72741\n",
-       "14997     United Kingdom22762\n",
-       "14998     United Kingdom21773\n",
-       "14999     United Kingdom22149\n",
+       "1000     United Kingdom\n",
+       "1001     United Kingdom\n",
+       "1002     United Kingdom\n",
+       "1003     United Kingdom\n",
+       "1004     United Kingdom\n",
+       "              ...      \n",
+       "14995    United Kingdom\n",
+       "14996    United Kingdom\n",
+       "14997    United Kingdom\n",
+       "14998    United Kingdom\n",
+       "14999    United Kingdom\n",
        "Length: 15000, dtype: object"
       ]
      },
