--- a/docs/guide/index.asciidoc
+++ b/docs/guide/index.asciidoc
@@ -8,6 +8,6 @@ include::overview.asciidoc[]
 
 include::installation.asciidoc[]
 
-include::dataframe.asciidoc[]
+include::dataframes.asciidoc[]
 
 include::machine-learning.asciidoc[]
