--- a/eland/Untitled-1.ipynb
+++ b/eland/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "    {\n",
     "        \"process.name\": [\"process1\"],\n",
     "        \"file.hash.sha256\": [\"hash1\"],\n",
+    "        \"file.hash.sha1\": [\"hash2\"],\n",
     "        \"label\": [1],\n",
     "    }\n",
     ")"
@@ -56,25 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = \"test_mapping\""
+    "index = \"test_mapping2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sidhuas/.pyenv/versions/3.9.1/envs/eland/lib/python3.9/site-packages/elasticsearch/connection/base.py:200: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.16/security-minimal-setup.html to enable security.\n",
+      "/home/sidhu/.local/share/virtualenvs/eland-JIur908e/lib/python3.8/site-packages/elasticsearch/connection/base.py:200: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.16/security-minimal-setup.html to enable security.\n",
       "  warnings.warn(message, category=ElasticsearchWarning)\n",
-      "/Users/sidhuas/.pyenv/versions/3.9.1/envs/eland/lib/python3.9/site-packages/elasticsearch/connection/base.py:200: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.16/security-minimal-setup.html to enable security.\n",
+      "/home/sidhu/.local/share/virtualenvs/eland-JIur908e/lib/python3.8/site-packages/elasticsearch/connection/base.py:200: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.16/security-minimal-setup.html to enable security.\n",
       "  warnings.warn(message, category=ElasticsearchWarning)\n"
      ]
     },
@@ -99,6 +100,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>file.hash.sha1</th>\n",
        "      <th>file.hash.sha256</th>\n",
        "      <th>label</th>\n",
        "      <th>process.name</th>\n",
@@ -106,7 +108,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>FabFA34BeVG4RuLOof0E</th>\n",
+       "      <th>GLBDBX4BpoMDJ9chv_8q</th>\n",
+       "      <td>hash2</td>\n",
        "      <td>hash1</td>\n",
        "      <td>1</td>\n",
        "      <td>process1</td>\n",
@@ -114,16 +117,16 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>\n",
-       "<p>1 rows × 3 columns</p>"
+       "<p>1 rows × 4 columns</p>"
       ],
       "text/plain": [
-       "                     file.hash.sha256  label process.name\n",
-       "FabFA34BeVG4RuLOof0E            hash1      1     process1\n",
+       "                     file.hash.sha1 file.hash.sha256  label process.name\n",
+       "GLBDBX4BpoMDJ9chv_8q          hash2            hash1      1     process1\n",
        "\n",
-       "[1 rows x 3 columns]"
+       "[1 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,32 +144,321 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "DataFrame dtypes and Elasticsearch index mapping aren't compatible:\n- 'file' is missing from DataFrame columns\n- 'process' is missing from DataFrame columns\n- 'file.hash.sha256' is missing from ES index mapping\n- 'process.name' is missing from ES index mapping",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/vq/cf4jrcl91bs9vpfh0qq4t1sr0000gn/T/ipykernel_15603/2029397875.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m ed.pandas_to_eland(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mes_client\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mes_dest_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mes_if_exists\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"append\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/eland/eland/etl.py\u001b[0m in \u001b[0;36mpandas_to_eland\u001b[0;34m(pd_df, es_client, es_dest_index, es_if_exists, es_refresh, es_dropna, es_type_overrides, thread_count, chunksize, use_pandas_index_for_es_ids)\u001b[0m\n\u001b[1;32m    182\u001b[0m                 \u001b[0mes_dest_index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    183\u001b[0m             ]\n\u001b[0;32m--> 184\u001b[0;31m             verify_mapping_compatibility(\n\u001b[0m\u001b[1;32m    185\u001b[0m                 \u001b[0med_mapping\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmapping\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m                 \u001b[0mes_mapping\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdest_mapping\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/eland/eland/field_mappings.py\u001b[0m in \u001b[0;36mverify_mapping_compatibility\u001b[0;34m(ed_mapping, es_mapping, es_type_overrides)\u001b[0m\n\u001b[1;32m    919\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mproblems\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    920\u001b[0m         \u001b[0mproblems_message\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproblems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 921\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m    922\u001b[0m             \u001b[0;34mf\"DataFrame dtypes and Elasticsearch index mapping \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    923\u001b[0m             \u001b[0;34mf\"aren't compatible:\\n{problems_message}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: DataFrame dtypes and Elasticsearch index mapping aren't compatible:\n- 'file' is missing from DataFrame columns\n- 'process' is missing from DataFrame columns\n- 'file.hash.sha256' is missing from ES index mapping\n- 'process.name' is missing from ES index mapping"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'process.name': {'type': 'keyword'}, 'file.hash.sha256': {'type': 'keyword'}, 'file.hash.sha1': {'type': 'keyword'}, 'label': {'type': 'long'}} {'file.hash.sha1': {'type': 'keyword'}, 'file.hash.sha256': {'type': 'keyword'}, 'label': {'type': 'long'}, 'process.name': {'type': 'keyword'}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sidhu/.local/share/virtualenvs/eland-JIur908e/lib/python3.8/site-packages/elasticsearch/connection/base.py:200: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.16/security-minimal-setup.html to enable security.\n",
+      "  warnings.warn(message, category=ElasticsearchWarning)\n"
      ]
     }
    ],
    "source": [
-    "ed.pandas_to_eland(\n",
+    "final_df = ed.pandas_to_eland(\n",
     "    df,\n",
     "    es_client,\n",
     "    es_dest_index=index,\n",
     "    es_if_exists=\"append\",\n",
     "    es_refresh=True,\n",
     "    use_pandas_index_for_es_ids=False\n",
-    ")"
+    ").to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file.hash.sha1</th>\n",
+       "      <th>file.hash.sha256</th>\n",
+       "      <th>label</th>\n",
+       "      <th>process.name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>file.hash.sha1</th>\n",
+       "      <td>hash1</td>\n",
+       "      <td>hash2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>process1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>file.hash.sha256</th>\n",
+       "      <td>hash1</td>\n",
+       "      <td>hash2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>process1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label</th>\n",
+       "      <td>hash1</td>\n",
+       "      <td>hash2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>process1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>process.name</th>\n",
+       "      <td>hash1</td>\n",
+       "      <td>hash2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>process1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 file.hash.sha1 file.hash.sha256  label process.name\n",
+       "file.hash.sha1            hash1            hash2      1     process1\n",
+       "file.hash.sha256          hash1            hash2      1     process1\n",
+       "label                     hash1            hash2      1     process1\n",
+       "process.name              hash1            hash2      1     process1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"file.hash.sha1\": [\"hash1\"],\n",
+    "    \"file.hash.sha256\": [\"hash2\"],\n",
+    "    \"label\": [1],\n",
+    "    \"process.name\": [\"process1\"],\n",
+    "}\n",
+    "df1 = pd.DataFrame(data, data)\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file.hash.sha1</th>\n",
+       "      <th>file.hash.sha256</th>\n",
+       "      <th>label</th>\n",
+       "      <th>process.name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GbBDBX4BpoMDJ9ch2P-M</th>\n",
+       "      <td>hash2</td>\n",
+       "      <td>hash1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>process1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     file.hash.sha1 file.hash.sha256  label process.name\n",
+       "GbBDBX4BpoMDJ9ch2P-M          hash2            hash1      1     process1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.iloc[[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dest_mapping = es_client.indices.get_mapping(index=index)[\n",
+    "                index\n",
+    "            ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mappings': {'properties': {'file': {'properties': {'hash': {'properties': {'sha1': {'type': 'keyword'},\n",
+       "       'sha256': {'type': 'keyword'}}}}},\n",
+       "   'label': {'type': 'long'},\n",
+       "   'process': {'properties': {'name': {'type': 'keyword'}}}}}}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dest_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_column_names(d, col_name):\n",
+    "\n",
+    "    for k,v in d.items():\n",
+    "        if k == \"type\" and not isinstance(v, dict):\n",
+    "            return col_name\n",
+    "         \n",
+    "        if k != \"properties\":\n",
+    "            col_name = f\"{col_name}.{k}\"\n",
+    "\n",
+    "    col_name = extract_column_names(v, col_name)\n",
+    "\n",
+    "    return col_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.json_normalize(dest_mapping[\"mappings\"][\"properties\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = {\"mappings\": {\"properties\": {}}}\n",
+    "\n",
+    "for col,col_type in zip(df.columns, df.iloc[0]):\n",
+    "    col_name = col.replace(\".properties\", \"\").replace(\".type\",\"\")\n",
+    "    records[\"mappings\"][\"properties\"][col_name] = {\"type\": col_type}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mappings': {'properties': {'file.hash.sha1': {'type': 'keyword'},\n",
+       "   'file.hash.sha256': {'type': 'keyword'},\n",
+       "   'label': {'type': 'long'},\n",
+       "   'process.name': {'type': 'keyword'}}}}"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'properties': {'sha1': {'type': 'keyword'}, 'sha256': {'type': 'keyword'}}}"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dest_mapping[\"mappings\"][\"properties\"][\"file\"][\"properties\"][\"hash\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'label'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\".\".join([\"label\"])"
    ]
   },
   {
@@ -196,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
