--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -38,7 +38,7 @@ model in {es}.
 [[ml-nlp-pytorch]]
 === Natural language processing (NLP) with PyTorch
 
-For NLP tasks, Eland allows importing PyTorch trained BERT models into {es}. 
+For NLP tasks, Eland enables you to import PyTorch trained BERT models into {es}. 
 Models can be either plain PyTorch models, or supported 
 https://huggingface.co/transformers[transformers] models from the
 https://huggingface.co/models[Hugging Face model hub].
