[DOCS] Include missing attributes

--- a/docs/guide/index.asciidoc
+++ b/docs/guide/index.asciidoc
@@ -2,7 +2,8 @@
 
 :doctype:           book
 
-include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
+include::{docs-root}/shared/versions/stack/{source_branch}.asciidoc[]
+include::{docs-root}/shared/attributes.asciidoc[]
 
 include::overview.asciidoc[]
 
