--- a/docs/guide/index.asciidoc
+++ b/docs/guide/index.asciidoc
@@ -2,8 +2,8 @@
 
 :doctype:           book
 
-include::{docs-root}/shared/versions/stack/{source_branch}.asciidoc[]
-include::{docs-root}/shared/attributes.asciidoc[]
+include::{asciidoc-dir}/../../shared/versions/stack/{source_branch}.asciidoc[]
+include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
 include::overview.asciidoc[]
 
