--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -38,6 +38,10 @@ model in {es}.
 [[ml-nlp-pytorch]]
 === Natural language processing (NLP) with PyTorch
 
+
+IMPORTANT: You need to use PyTorch `1.11.0` or earlier to import an NLP model. 
+Run `pip install torch==1.11` to install the aproppriate version of PyTorch.
+
 For NLP tasks, Eland enables you to import PyTorch trained BERT models into {es}. 
 Models can be either plain PyTorch models, or supported 
 https://huggingface.co/transformers[transformers] models from the
