--- a/docs/guide/machine-learning.asciidoc
+++ b/docs/guide/machine-learning.asciidoc
@@ -125,9 +125,8 @@ Replace the `$ELASTICSEARCH_URL` with the URL for your Elasticsearch cluster. Fo
 You can install models in a restricted or closed network by pointing the 
 `eland_import_hub_model` script to local files. 
 
-**Requirements**
-
-* https://git-lfs.com/[Git Large File Storage] installed.
+To be able to complete the process below, make sure that 
+https://git-lfs.com/[Git Large File Storage] is installed in your system.
 
 1. Select a model you want to use from Hugging Face. Refer to the 
 {ml-docs}/ml-nlp-model-ref.html[compatible third party model] list for more 
